removed more we's

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4819,10 +4819,10 @@ modeling and specification languages like OWL, Common Logic, or \CASL
 come with a model-theoretic semantics, or (like UML class diagrams)
 can be equipped with one.
 
-Hence, we recall the notion of satisfaction system
-\cite{carnielli2008analysis}, called `rooms' in the terminology of
-\cite{CharPar}. They capture the Tarskian notion of satisfaction of a
-sentence in a model in an abstract way. 
+\cbs An abstract notion of logical system is given by \cbe{} the notion of
+satisfaction system \cite{carnielli2008analysis}, called `rooms' in
+the terminology of \cite{CharPar}. They capture the Tarskian notion of
+satisfaction of a sentence in a model in an abstract way.
 %For the semantics of minimization, we assume a pre-order on models.
 
 \begin{definition}\label{def:room}
@@ -5108,7 +5108,7 @@ instead of classes.}, and can be thought of as the shape of the graph of
 interconnections between the objects of $C$ selected by the functor $D$. A \emph{cocone} of
 a network $D:G\to C$ consists of an object $c$ of $C$ and a family of
 morphisms $\alpha_i\map{D(i)}{c}$, for each object $i$ of $G$, such that for
-each edge of the network, $e\map{i}{i'}$ we have that 
+each edge of the network, $e\map{i}{i'}$ \cbs it holds\cbe{} that 
 $D(e);\alpha_{i'} = \alpha_{i}$. 
 A \emph{colimiting cocone} (or colimit) $(c, \{\alpha_i\}_{i\in|G|})$ can be
 intuitively understood as a minimal cocone, i.e. has the property that for any 
@@ -6393,7 +6393,7 @@ together with
 \begin{enumerate}
 \item for each node $N_1$ in $G_1$ labeled with $(\cI_1, \Sigma_1, \cM_1)$
 such that $\sigma^G(N_1)$ is a node $N_2$ labeled with $(\cI_2,\Sigma_2,\cM_2)$ in $G_2$,
-we have a signature morphism $(\rho^M_{N_1},\sigma^M_{N_1}) : (\cI_1, \Sigma_1) \to (\cI_2, \Sigma_2)$,
+there is a signature morphism $(\rho^M_{N_1},\sigma^M_{N_1}) : (\cI_1, \Sigma_1) \to (\cI_2, \Sigma_2)$,
 where 
 \item $\rho^M_{N_1} = (\Phi, \alpha, \beta) : \cI_1 \to \cI_2$ is an institution comorphism between the logics of the two nodes and
 $\sigma^M_{N_1} : \Phi(\Sigma_1) \to \Sigma_2$ is a signature morphism,
@@ -10217,7 +10217,7 @@ version of the OMS, e.g.\ \url{/ref/master/default/pizza}.
 
 If however the loc/id is requested with a \emph{text/plain} content type\cbs Ontohub
 serves the OMS.\cbe This is in part because there is no reasonable
-representation of a directory that we would want to support. Another reason is
+representation of a directory that \cbs could be supported\cbe. Another reason is
 that Ontohub serves OMS as its main objects. And as \emph{text/plain} is
 the MIME-type that was chosen to always return the textual content of an
 OMS (the raw file),\cbs one needs  to serve that,\cbe even if the loc/id would
