--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -1506,7 +1506,7 @@ The serialization of OWL in RDF, for example, does not satisfy the RDF conforman
 The given serialization has to satisfy all of the following conditions:
 \begin{itemize}
 \item The serialization conforms with the requirements for the \mimetype{text/plain} media type specified in \nisref{IETF/RFC 2046}, section 4.1.3.
-\item The serialization shall provide a designated comment construct that can be placed sufficiently flexible as to be uniquely associated with any non-comment construct of the language.  That means, for example, one of the following:
+\item The serialization shall provide a designated comment construct that can be placed sufficiently\cbs flexibly\cbe as to be uniquely associated with any non-comment construct of the language.  That means, for example, one of the following:
   \begin{itemize}
   \item The serialization provides a construct that indicates the start and end of a comment and may be placed before/after each token that represents a structural element of an OMS.
   \item The serialization provides line-based comments (ranging from an indicated position to the end of a line) but at the same time allows the flexible placement of line breaks before/after each token that represents a structural element of an OMS.
@@ -1543,7 +1543,7 @@ Any conforming serialization of an OMS language shall have a machine-processable
 \cbe
 \end{fminipage}
 
-For any conforming OMS language, logic, and serialization of an OMS language, it is required that it be assigned an HTTP IRI, by which it can be identified.  It is also required that a machine-processable description of this language/logic/serialization be retrievable by dereferencing this IRI, according to the linked data principles \nisref{W3C/TR REC-ldp-20150226:2015}.  At least there has to be an RDF description in terms of the vocabulary specified in \aref{a:dol-onto}, which has to be made available in the RDF/XML serialization when a client requests content of the MIME type \mimetype{application/rdf+xml}.  Descriptions of the language/logic/serialization in further representations, having different content types, may be provided.%\CLnote[type=fyi]{that opens the door for, \eg, OMDoc}
+For any conforming OMS language, logic, and serialization of an OMS language, it is required that it be assigned an HTTP IRI, by which it can be identified.  It is also required that a machine-processable description of this language/logic/serialization\cbs is\cbe retrievable by dereferencing this IRI;\cbs this requirement follows\cbe the linked data principles \nisref{W3C/TR REC-ldp-20150226:2015}.  At least there has to be an RDF description in terms of the vocabulary specified in \aref{a:dol-onto}, which has to be made available in the RDF/XML serialization when a client requests content of the MIME type \mimetype{application/rdf+xml}.  Descriptions of the language/logic/serialization in further representations, having different content types, may be provided.%\CLnote[type=fyi]{that opens the door for, \eg, OMDoc}
 
 
 \sclause{Conformance of a Document With \DOL}\label{c:conform:document}
@@ -1800,7 +1800,7 @@ plus non-logical annotations\index{annotation}.}
     \item properties (denoting binary relations over objects; also called
       roles).
     \end{itemize}
-    This is opposed to logical symbols in OWL, e.g., those for intersection
+    \cbs These non-logical symbols are distinguished from\cbe logical symbols in OWL, e.g., those for intersection
     and union of classes.
   \end{example}
 
@@ -1812,7 +1812,7 @@ plus non-logical annotations\index{annotation}.}
     \item names (denoting objects from the domain of discourse),
     \item sequence markers (denoting sequences of objects).
     \end{itemize}
-    This is opposed to logical symbols in Common Logic, e.g.\ logical connectives and
+    \cbs These non-logical symbols are distinguished from\cbe  logical symbols in Common Logic, e.g.\ logical connectives and
     quantifiers.
   \end{example}
 
@@ -1827,7 +1827,7 @@ of non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
      set of all non-logical symbols possible in that language.     
    \end{note}
    \begin{note}
-    The signature of an OMS is usually uniquely determined.
+    The signature of an OMS is usually \cbs unequivocally determinable.\cbe 
    \end{note}
 
 
@@ -2431,7 +2431,7 @@ and the handling of prefixes for CURIEs.}
 
   \termdefinitionLight{annotation language aspect\index{language aspect ! annotation}}{the (unique) language aspect of an \termref{OMS language} that enables the  expression of comments and annotations\index{annotation}.}
 
-  \termdefinition{profile}{(syntactic) \termref{sublanguage} of an \termref{OMS language} interpreting according to a particular \termref{logic}
+  \termdefinition{profile}{(syntactic) \termref{sublanguage} of an \termref{OMS language} \cbs interpreted\cbe according to a particular \termref{logic}
 that targets specific applications or reasoning methods.}
   \begin{example}
     Profiles of OWL 2 include OWL 2 EL, OWL 2 QL, OWL 2 RL, OWL 2 DL, and OWL 2 Full.
@@ -2473,7 +2473,7 @@ Common Logic uses the term ``dialect''; the following are standard Common Logic 
 \sclause{Logic}\label{c:term-logic}
 
 \begin{definitions}
-  \termdefinition{logic}{specification of valid reasoning that comprises signatures\index{signature} \cbs  (user defined vocabularies)\cbe, 
+  \termdefinition{logic}{specification of valid reasoning that comprises signatures\index{signature}\cbs  (user defined vocabularies)\cbe, 
 models \index{model} \cbs (interpretations of these)\cbe,
 sentences\index{sentence} \cbs (constraints on models)\cbe,
  and a \termref{satisfaction relation} between models\index{module} and sentences\index{sentence}.}
@@ -2551,12 +2551,12 @@ translations\index{logic translation} and logic reductions\index{logic reduction
 
   \termdefinition{homogeneous OMS}{\termref{OMS} whose parts are all formulated in one and the same \termref{logic}.}
 \begin{note}
-Opposite of \termref{heterogeneous OMS}.
+\cbs The opposite\cbe of \termref{heterogeneous OMS}.
 \end{note}
 
   \termdefinition{heterogeneous OMS}{\termref{OMS} whose parts are formulated in different logics\index{logic}.}
 \begin{note}
-Opposite of \termref{homogeneous OMS}.
+\cbs The opposite\cbe of \termref{homogeneous OMS}.
 \end{note}
 \begin{example}
 See section~\ref{dist-het-onto}.
@@ -2862,7 +2862,7 @@ To illustrate these challenges, \cbs this clause presents \cbe a set of usage sc
 
 The purpose of \DOL is to provide  a
 standardized representation language, which can be used to represent structured OMS and the relations 
-between OMS as part of OMS networks in a semantically well-defined way. Thus, tools that implement \DOL are able to integrate different OMS into a coherent whole, thereby enabling users of \DOL to overcome the different kind of interoperability issues that illustrated by the usage scenarios in this clause.  
+between OMS as part of OMS networks in a semantically well-defined way. Thus, tools that implement \DOL are able to integrate different OMS into a coherent whole, thereby enabling users of \DOL to overcome the different kind of interoperability issues that\cbs are\cbe illustrated by the usage scenarios in this clause.  
 
 \cbs
 Most of the following subsections are illustrated with sample OMS
@@ -3747,7 +3747,7 @@ They (together with importations) form the items in a \emph{\DOL library}.
 \item[open] \DOL supports mapping, integrating, and annotating OMS across arbitrary internet locations.  It makes use of existing open standards wherever suitable.  The criteria for extending \DOL (see next item) are transparent and explicit.
 \item[extensible] \DOL provides a framework into which any existing, and, desirably, any future OMS language can be plugged.
 \end{description}
-\DOL is applicable to any OMS language that has a formal, logic-based semantics or a semantics defined by translation to another OMS language with such a formal semantics. The annotation framework of \DOL is additionally applicable to the non-logical constructs of such languages. This \IS specifies formal criteria for establishing the conformance of an OMS language with \DOL.  The annex establishes the conformance of a number of relevant OMS languages with \DOL; a registry shall offer the possibility to add further (also non-standardized) languages. 
+\DOL is applicable to any OMS language that has a formal, logic-based semantics or a semantics defined by translation to another OMS language with such a formal semantics. The annotation framework of \DOL is additionally applicable to the non-logical constructs of such languages. This \IS specifies formal criteria for establishing the conformance of an OMS language with \DOL.  The annex establishes the conformance of a number of relevant OMS languages with \DOL; a registry shall offer the possibility to add further (\cbs including\cbe non-standardized) languages. 
 
 \DOL provides syntactic constructs for structuring OMS regardless of the logic their sentences are formalized in. 
 Since \DOL is a meta-language,  it \textit{inherits} the logical language aspects of conforming OMS languages.  It is possible to literally include sentences expressed in such OMS languages in a \DOL OMS.
@@ -3803,7 +3803,7 @@ Whereas the first feature determines the expressivity of the language and the po
 
 Acknowledging the wide tool support that conforming established languages such as OWL, RDF, Common Logic, UML, MOF, or \CASL enjoy, existing OMS in these (and any other) conforming languages remain as they are within the \DOL framework. \DOL enhances their modularity and annotation facilities to a superset of the modularity and annotation facilities they provide themselves. 
 Using \DOL's modularity constructs to make statements about modules of existing OMS works by making relevant parts of these OMS, e.g., sets of axioms, identifiable, and then referring to these identifiers from \DOL statements.  \DOL's modularity constructs are semantically well-founded within a library of formal relationships between the logics underlying the different supported OMS languages.
-General annotation of OMS and their parts works in a similar way.  Here, \DOL does not provide its own annotation constructs, but once more \DOL's general mechanism of making things of interest identifiable can be employed.  Once these things have been identified, the actual annotations can be added using external mechanisms such as RDF.
+General annotation of OMS and their parts works in a similar way.  Here, \DOL does not provide its own annotation constructs, but once\cbs again\cbe \DOL's general mechanism of making things of interest identifiable can be employed.  Once these things have been identified, the actual annotations can be added using external mechanisms such as RDF.
 \ednote{Till, is this standoff markup remark up to date? TM: we promise standoff markup at various places, but we never are specific how this can be written in \DOL.\\
 CL: I have now emphasized that \DOL itself doesn't do annotation but only identification, whereas annotation is left to RDF.}
 
@@ -3844,7 +3844,7 @@ theory.
 
 A large variety of OMS languages in use can be captured at an abstract level using the concept of 
 \emph{institutions}\index{institution} \cite{GoguenBurstall92}.
-This allows the development of results independently of the particularities of a logical system and to use the notions of institution and  logical language interchangeably. 
+This allows the development of\cbs \DOL\cbe independently of the particularities of a logical system and to use the notions of institution and  logical language interchangeably. 
 %We first introduce the concept of \emph{logic syntax}.
 The main idea is to collect the non-logical
 symbols of the language in signatures and to assign to each signature the set of sentences that can be formed with its symbols. 
@@ -3890,10 +3890,8 @@ requires a translation into a common target language to be applied
 in the transitive closure of the logic graph.  Depending on the
 reasoners available in the given application setting, it can, however,
 be necessary to employ a different translation.  Authors can express
-which one to employ.  In a multi-step translation, it is possible to
-implicitly apply as many default translations as possible, and to
-concentrate on making explicit only those translations that deviate
-from the default.
+which one to employ.  \cbs However, \DOL provides default translations, which are 
+applied unless the user specifies a translation that deviates from the default. Both default and non-default translations may be combined to multi-step translations.\cbe 
 
 \section{\DOL Includes Provisions for Expressing Mappings Between OMS}\label{c:req:links}
 
@@ -3956,8 +3954,8 @@ an EBNF grammar.
 \item OMS mappings 
 \item OMS networks
 %\item \red{queries}
-\item libraries (items in libraries are: definitions of OMS, OMS mappings, and OMS networks, as well as qualifications choosing the logic,
-OMS language and/or serialization)
+\item libraries (items in libraries are: definitions of OMS, OMS mappings, and OMS networks, as well as qualifications choosing\cbs (i) the logic,
+(2) the OMS language and/or (3) the serialization)\cbe
 \item identifiers
 \item annotations
 \end{itemize}
@@ -3968,7 +3966,7 @@ subclasses of the \DOL metaclass \syntax{NativeOMS}.
 If a conforming OMS language has a metaclass for basic OMS,
 this is a subclass of the metaclass \syntax{BasicOMS}.\cbe
 
-\cbs The following subclauses, one per MOF metaclass , specify the abstract syntax of \DOL in MOF. Additionally, an informative EBNF specification
+\cbs The following subclauses, one per MOF metaclass, specify the abstract syntax of \DOL in MOF. Additionally, an informative EBNF specification
 is given in appendix~ref\cbe{a:EBNF}.\cbe
 
 
@@ -4815,10 +4813,10 @@ modeling and specification languages like OWL, Common Logic, or \CASL
 come with a model-theoretic semantics, or (like UML class diagrams)
 can be equipped with one.
 
-Hence, we recall the notion of satisfaction system
-\cite{carnielli2008analysis}, called `rooms' in the terminology of
-\cite{CharPar}. They capture the Tarskian notion of satisfaction of a
-sentence in a model in an abstract way. 
+\cbs An abstract notion of logical system is given by \cbe{} the notion of
+satisfaction system \cite{carnielli2008analysis}, called `rooms' in
+the terminology of \cite{CharPar}. They capture the Tarskian notion of
+satisfaction of a sentence in a model in an abstract way.
 %For the semantics of minimization, we assume a pre-order on models.
 
 \begin{definition}\label{def:room}
@@ -5104,7 +5102,7 @@ instead of classes.}, and can be thought of as the shape of the graph of
 interconnections between the objects of $C$ selected by the functor $D$. A \emph{cocone} of
 a network $D:G\to C$ consists of an object $c$ of $C$ and a family of
 morphisms $\alpha_i\map{D(i)}{c}$, for each object $i$ of $G$, such that for
-each edge of the network, $e\map{i}{i'}$ we have that 
+each edge of the network, $e\map{i}{i'}$ \cbs it holds\cbe{} that 
 $D(e);\alpha_{i'} = \alpha_{i}$. 
 A \emph{colimiting cocone} (or colimit) $(c, \{\alpha_i\}_{i\in|G|})$ can be
 intuitively understood as a minimal cocone, i.e. has the property that for any 
@@ -6389,7 +6387,7 @@ together with
 \begin{enumerate}
 \item for each node $N_1$ in $G_1$ labeled with $(\cI_1, \Sigma_1, \cM_1)$
 such that $\sigma^G(N_1)$ is a node $N_2$ labeled with $(\cI_2,\Sigma_2,\cM_2)$ in $G_2$,
-we have a signature morphism $(\rho^M_{N_1},\sigma^M_{N_1}) : (\cI_1, \Sigma_1) \to (\cI_2, \Sigma_2)$,
+there is a signature morphism $(\rho^M_{N_1},\sigma^M_{N_1}) : (\cI_1, \Sigma_1) \to (\cI_2, \Sigma_2)$,
 where 
 \item $\rho^M_{N_1} = (\Phi, \alpha, \beta) : \cI_1 \to \cI_2$ is an institution comorphism between the logics of the two nodes and
 $\sigma^M_{N_1} : \Phi(\Sigma_1) \to \Sigma_2$ is a signature morphism,
@@ -10207,7 +10205,7 @@ version of the OMS, e.g.\ \url{/ref/master/default/pizza}.
 
 If however the loc/id is requested with a \emph{text/plain} content type\cbs Ontohub
 serves the OMS.\cbe This is in part because there is no reasonable
-representation of a directory that we would want to support. Another reason is
+representation of a directory that \cbs could be supported\cbe. Another reason is
 that Ontohub serves OMS as its main objects. And as \emph{text/plain} is
 the MIME-type that was chosen to always return the textual content of an
 OMS (the raw file),\cbs one needs  to serve that,\cbe even if the loc/id would
