more of pete's comments

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2418,7 +2418,7 @@ a \termref{logic graph}, an \termref{OMS language graph} and
 
   \termdefinition{sublanguage}{syntactically specified subset of a given language, consisting of a subset of its terminal and nonterminal symbols and grammar rules.}
 
- \termdefinitionLight{language aspect\index{language aspect ! (general)}}{set of language constructs of a given language, not necessarily forming a sublanguage.}
+ \termdefinitionLight{language aspect\index{language aspect ! (general)}}{\cbs a\cbe set of language constructs of a given language, not necessarily forming a sublanguage.}
 
   \termdefinitionLight{logical language aspect\index{language aspect ! logical}}{the (unique) language aspect of an \termref{OMS language} that enables the expression of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} in a logic.}
 
