--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4776,7 +4776,7 @@ semantics gives \DOL a rock-solid foundation, and provides increased
 trustworthiness in applications based on OMS written in \DOL.  The
 semantics of \DOL is moreover the basis for formal interoperability, as
 well as for the meaningful use of logic-based tools for \DOL, such as
-theorem provers, model-checkers, SMT solvers etc.  Last but not least,
+theorem provers, model-checkers,\cbs satisfiability modulo theories (SMT)\cbe solvers etc.  Last but not least,
 the semantics has provided valuable feedback on the language design,
 and has led to some corrections on the abstract syntax.  These
 reasons, plus the requirement in the OntoIOp RFP to provide a
@@ -4787,7 +4787,7 @@ this standard.
 
 The semantics starts with the theoretical foundations. Since \DOL is a
 language that can be applied to a variety of logics and logic
-translations, it is based on some heterogeneous logical environment.
+translations, it is based on\cbs a\cbe heterogeneous logical environment.
 Hence, the most important need is to capture precisely what a
 heterogeneous logical environment is.
 
@@ -4852,8 +4852,8 @@ While this signature-free treatment enjoys simplicity and is wide-spread in the 
 concepts and definitions found in logics, e.g.\ the notion of a conservative extension, involve the
 \emph{vocabulary} or \emph{signature} $\Sigma$ \label{vocabulary} used in sentences.  Signatures 
 can be extended with new non-logical symbols, or some of these symbols can be renamed; abstractly, 
-this is captured using signature morphisms. Moreover, also morphisms
-between models are needed in order to give a semantics to \syntax{minimize},
+this is captured using signature morphisms. Moreover,\cbs  morphisms
+between models are also\cbe needed in order to give a semantics to \syntax{minimize},
 \syntax{maximize}, \syntax{free} and \syntax{cofree}---these constructs
 use model morphisms to select certain models, e.g.\ the minimal ones.
 This leads to the notion of \emph{institution}. An institution
@@ -8795,8 +8795,7 @@ ModuleName           = IRI ;
 ModuleType           = 'module-type' , OMS , OMS ;
 
 AlignDefn            = 'align-defn' , AlignName , [ AlignCard ] , AlignType, 
-                                    AlignSem,   { Correspondence } ; <\footnote{Note that this grammar uses ``type'' as in ``the type of a function'', whereas the Alignment API uses ``type'' for
-	 the totality/injectivity of the relation/function.  For the latter, this grammar uses ``cardinality''.}>
+                                    AlignSem,   { Correspondence } ; <\footnote{Note that this grammar uses ``type'' as in ``the type of a function'', whereas the Alignment API uses ``type'' \cbs for\:  the\cbe totality/injectivity of the relation/function.  For the latter, this grammar uses ``cardinality''.}>
 AlignName            = IRI ;
 AlignCards           = AlignCardForward , AlignCardBackward ; 
 AlignCardForward     = 'align-card-forward' , AlignCard ;
