all of the easy comments by Pete are addressed.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8159,10 +8159,11 @@ are those whose conformance with \DOL is established in the preceding annexes (O
 \item TPTP
 \end{itemize}
 
-The list of chosen languages includes those ones required as mandatory
-ones in the RFP. Since these are only ontology and modeling
-languages, also a specification language is included, namely the
-Common Algebraic Specification Language (CASL). The list of
+%The list of chosen languages includes those ones required as mandatory
+% ones in the RFP. Since these are only ontology and modeling
+% languages, also a specification language is included, namely the
+% Common Algebraic Specification Language (CASL).
+ The list of
 language translations, given below, comprises standard translations from the literature,
 as well as further translations that are considered useful for
 logical interoperability:
@@ -9875,14 +9876,14 @@ to the term \termref{structured OMS} in this \IS{}.}
 
 \sclause{The Heterogeneous Tool Set (Hets)}\label{a:hets} The
 Heterogeneous Tool Set (Hets) is \cbs an implementation \cbe of
-\DOL. Hets is a parsing, analysis and proof tool
+\DOL. Hets\cbs is\cbe a parsing, analysis and proof tool
 for OMS, OMS networks and OMS mappings written in \DOL and
 \DOL-conforming languages.  It supports a wide range of OMS languages
 and language translations, in particular OWL, RDF, Common Logic,
 first-order logic and CASL. Support for MOF, UML class diagrams and
 state machines is in preparation.  Hets has been co-developed together
 with the \DOL language presented in this standard, and has been used to
-test the examples. Hets has been connected to considerable number of
+test the examples. Hets has been connected to\cbs a\cbe considerable number of
 proof tools like theorem provers, supporting various logics. Logics
 that are not directly supported by any proof tool can be supported
 indirectly, through a logic mapping into a tool-supported logic.
@@ -10049,7 +10050,7 @@ This is quite important as the IRI of an OMS is the general starting
 interface a user has with the given OMS. When she evaluates the OMS
 in her tool of choice she'll use the IRI to reference the given OMS. When
 she wants to work on Ontohub with the given OMS she'll point her browser
-at the given IRI. As one familiarity with the Ontohub application increases one
+at the given IRI. As\cbs one's\cbe familiarity with the Ontohub application increases one
 will more often want to use the IRI instead of just searching or even browsing
 for something.  This is further intensified if the IRI-schema follows a schema
 that is easily understood by a user.
