--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8797,7 +8797,7 @@ ModuleName           = IRI ;
 ModuleType           = 'module-type' , OMS , OMS ;
 
 AlignDefn            = 'align-defn' , AlignName , [ AlignCard ] , AlignType, 
-                                    AlignSem,   { Correspondence } ; <\footnote{Note that this grammar uses ``type'' as in ``the type of a function'', whereas the Alignment API uses ``type'' \cbs for\:  the\cbe totality/injectivity of the relation/function.  For the latter, this grammar uses ``cardinality''.}>
+                                    AlignSem,   { Correspondence } ; <\footnote{Note that this grammar uses ``type'' as in ``the type of a function'', whereas the Alignment API \cite{AlignmentAPI} uses ``type'' \cbs for\:  the\cbe totality/injectivity of the relation/function.  For the latter, this grammar uses ``cardinality''.}>
 AlignName            = IRI ;
 AlignCards           = AlignCardForward , AlignCardBackward ; 
 AlignCardForward     = 'align-card-forward' , AlignCard ;
@@ -8903,6 +8903,9 @@ substitutions can be stored separately, using a \syntax{SubstDefn}. A
 \syntax{ResultDefn} expresses that certain answer substitutions are
 the result of a query. Optionally, a result can be expressed to be
 complete, meaning that it comprises all answer substitutions to the query.
+\cbs Note that by default, OMS are employed with an open world semantics,
+but using minimizations, (part of) OMS can be equipped with a closed
+world semantics.\cbe
 
 \includegraphics[scale=0.5]{mof/dia/dia6.png}
 
