--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2,7 +2,7 @@
 % arara: makeindex 
 % arara: pdflatex: { synctex: on } 
 
-\newcommand{\version}{0.951}
+\newcommand{\version}{0.96}
 
 
 %todo
@@ -6920,7 +6920,7 @@ pos=h,
 \cbs  \ednote{This paragraph has merely been moved.}
 It is expected that \DOL will be used for other languages than the  set of \DOL-conforming
 languages that are discussed in this \IS. There is a  \textbf{\termref{registry} for \DOL-conforming languages and translations} hosted
-at \url{http://purl.net/DOL}.  The registry  also includes descriptions of
+at \url{http://purl.net/DOL/registry}.  The registry  also includes descriptions of
 \DOL-conforming languages and translations (as well as other information needed by implementors
 and users) in both human-readable and machine-processable form.  
 
