expanded resp.; LibImport

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1427,7 +1427,7 @@ this case, they \shall preserve the semantics of the structuring
 language aspect.  Furthermore, language translations \should preserve
 comments and annotations.  All comments attached to a sentence (or
 symbol) in the source \should be attached to its translation in the
-target (if there\cbs is\cbe more than one sentences (resp.\ symbols)
+target (if there\cbs is\cbe more than one sentences (respectively symbols)
 expressing the translation, to at least one of them).
 
 \sclause{Conformance of a Serialization of an OMS Language With \DOL}\label{c:conform:serialization}
@@ -3971,18 +3971,22 @@ is given in appendix~ref\cbe{a:EBNF}.\cbe
 
 \sclause{Libraries}\label{c:libraries}
 
-A \termref{library} (\syntax{Library}) consists of a collection of (named)  OMS and mappings between these.  More specifically, a
+A \termref{library} (\syntax{Library}) consists of a collection of (named)  OMS, \cbs OMS networks,\cbe{} and mappings between these.  More specifically, a
 library consists of a name, followed by a list of
 \syntax{LibraryItem}s.  A \syntax{LibraryItem} is either a
 definition of an OMS  (\syntax{OMSDefn}), 
 a mapping between OMS
 (\syntax{MappingDefn}), 
-a definition of an OMS network  (\syntax{NetworkDefn})
+a definition of an OMS network  (\syntax{NetworkDefn}),
+an import of another library (\syntax{LibImport}),
 %a definition related to queries 
 %(\syntax{QueryRelatedDefn})
 or a \syntax{Qualification} selecting a specific
 OMS language, logic and/or syntax that is used to interpret the
-subsequent \syntax{LibraryItem}s.  Alternatively, a library can also be the verbatim inclusion of an OMS written in
+subsequent \syntax{LibraryItem}s.  
+\cbs A \syntax{LibImport} leads to the inclusion of all \syntax{LibraryItem}s of the imported library into the importing one.\cbe
+
+Alternatively, a library can also be the verbatim inclusion of an OMS written in
 an OMS language that conforms with \DOL (\syntax{NativeOMS}; \cf \ref{c:conform:logic}).
 
 
@@ -4017,7 +4021,7 @@ language,
 expressive logic (that is,
 some non-logical symbols are hidden, but the semantic effect of sentences involving these is kept),
 \item a module extracted from an OMS, using a restriction signature,
-\item an approximation of an OMS, in a subsignature or sublogic, with the effect that sentences not expressible in the subsignature resp.\ sublogic are replaced with a suitable approximation,
+\item an approximation of an OMS, in a subsignature or sublogic, with the effect that sentences not expressible in the subsignature respectively sublogic are replaced with a suitable approximation,
 \item a filtering of an OMS, with the effect that some signature symbols and axioms are removed from the OMS,
 \item an extension of an OMS with a basic or a minimizable OMS, optionally named and/or marked as conservative, monomorphic, definitional, weakly definitional or implied,
 \item a union of several OMS (the major difference between a union and extension is that the members of the unions need to be self-contained OMS, while the extensions may reuse the signature of the extended OMS), 
@@ -4206,7 +4210,7 @@ bound to the prefix and the reference.
 \item \DOL does support the declaration  of a ``no prefix'' mapping (covering CURIEs such as 
 \syntax{name}). If there is no explicit declaration for the ``no prefix'', it defaults to a 
 context-sensitive expansion mechanism, which always prepends the library IRI (in the context of a 
-structured OMS where named OMS are referenced) resp.\ the current OMS IRI (in the context of a basic
+structured OMS where named OMS are referenced) respectively the current OMS IRI (in the context of a basic
 OMS) to a symbol name. Both the separator between the library and the OMS name and that between the 
 OMS name and the symbol name can be declared (using the keyword \syntax{separators}), and both default to ``//''.
 
@@ -4806,7 +4810,7 @@ domain.
 \cbs In the following the theoretical foundations of the semantics of \DOL is specified.\cbe
 The notions of \emph{institution} and institution 
 \emph{comorphism} and \emph{morphism} are introduced, which provide formalizations of the terms 
-\termref{logic}, resp.\ \termref{logic translation}, resp.\  \termref{logic reduction}. 
+\termref{logic}, respectively \termref{logic translation}, respectively  \termref{logic reduction}. 
 
 Since \DOL covers OMS written in one or several logical systems, the
 \DOL semantics needs to clarify the notion of logical
