in the semantics, assumed -> required

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5167,7 +5167,7 @@ it has pushouts and admits (weak) amalgamation for these.
 \cite{weakcol} studies conditions for existence of weakly amalgamable cocones
 in a heterogeneous setting, where the network consists of signatures (or theories)
 in different logics. Since a network may admit more than one weakly amalgamable cocone,\cbs
-a selection operations is assumed\cbe both for the weakly amalgamable cocone of a network 
+a selection operation is required\cbe both for the weakly amalgamable cocone of a network 
 and for the (potentially non-unique) amalgamation of a family of models compatible with the
 network. This allows us to define a function
 $colimit$ taking as argument a network of heterogeneous signatures and
@@ -5175,7 +5175,7 @@ returning the selected weakly amalgamable cocone for the network and
 a function $\oplus$ taking as argument a family of models compatible with a network
 and returning its selected amalgamation.
 
-\cbs To be able to talk about the symbols of a signature in a formal way, it is assumed that the\cbe category of signatures of an institution is 
+\cbs To be able to talk about the symbols of a signature in a formal way, it is required that the\cbe category of signatures of an institution is 
 an inclusive category with symbols, as defined below:
 \begin{definition}
 An \emph{inclusive category with symbols} is an inclusive category
@@ -5201,16 +5201,16 @@ translations), and a collection of serializations. Moreover, some of the institu
 a binary supports relation between OMS languages and institutions,
 and a binary supports relation between OMS languages and
 serializations. 
-\cbs Each language is assumed to have a default logic and serialization.\cbe
+\cbs Each language is required to have a default logic and serialization.\cbe
 
 
-\cbs It is assumed that\cbe for each institution in the heterogeneous logical environment there is a trivial signature
+\cbs It is required that\cbe for each institution in the heterogeneous logical environment there is a trivial signature
 $\emptyset$ with model class $\cM_\emptyset$ and such that there exists a unique signature morphism
-from $\emptyset$ to any signature of the institution.\cbs Moreover,the existence of a partial union operation on logics is assumed; denoted $\bigcup$:\cbe 
+from $\emptyset$ to any signature of the institution.\cbs Moreover, the existence of a partial union operation on logics is required; denoted $\bigcup$:\cbe 
 $L_1 \bigcup L_2 = (L, \rho_1:L1 \to L, \rho_2 : L_2 \to L)$, when defined. Finally, some of the comorphisms are marked as default translations and some of the morphisms as default projection, with the condition that between two institutions at most one comorphism 
 and at most one morphism is marked as default.
 
-For each logic in the heterogeneous logical environment,\cbs it is further assumed that there is :\cbe
+For each logic in the heterogeneous logical environment,\cbs it is further required that there is:\cbe
 
 \begin{itemize}
   \item a function that turns a symbol map into a signature morphism,
@@ -5222,7 +5222,7 @@ For each logic in the heterogeneous logical environment,\cbs it is further assum
 \end{itemize}
 
 
-Further,  for each institution, it is assumed that there exist (possibly partial) union and difference operations on signatures.
+Further,  for each institution, it is required that there exist (possibly partial) union and difference operations on signatures.
 These concepts could be captured in a categorical setting using \emph{inclusion systems} \cite{DGS91}.
 \cbs However, inclusion systems are too strong for the purposes of this specification.\cbe  %therefore, we will work under weaker assumptions.
 
@@ -5308,7 +5308,7 @@ both labeled with
 heterogeneous signature morphisms between the signatures of the source and target nodes.
 The theory of a node  may be undefined, as in the case of OMS, and when it is defined, 
 the class of models of that node is the class of models of $\Th(N)$. 
-For brevity,\cbs  the label of a node may be written as a tuple. Further, it is assumed that  any OMS can be assigned a unique name.\cbe 
+For brevity,\cbs  the label of a node may be written as a tuple. Further, it is required that  any OMS can be assigned a unique name.\cbe 
 
 The semantics of a network of OMS is a graph
 whose nodes are labeled like in the semantics of OMS mappings and 
