--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5224,7 +5224,7 @@ For each logic in the heterogeneous logical environment,\cbs it is further requi
 
 Further,  for each institution, it is required that there exist (possibly partial) union and difference operations on signatures.
 These concepts could be captured in a categorical setting using \emph{inclusion systems} \cite{DGS91}.
-\cbs However, inclusion systems are too strong for the purposes of this specification.\cbe  %therefore, we will work under weaker assumptions.
+\cbs However, inclusion systems are too strong for the purposes of this specification.  Therefore, weaker assumptions will be used.\cbe
 
 \begin{definition}  
  An \emph{inclusive category} \cite{DBLP:conf/birthday/GoguenR04} 
